Fix: add token for GitHub Pages deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,6 @@ jobs:
         with:
           branch: gh-pages
           folder: dist/order-book
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+          
